DC-215 - Fixed styles for mobile. Edited bleed of colors as per conversation with designer. Modified grid in several files

--- a/src/components/Header-style.scss
+++ b/src/components/Header-style.scss
@@ -21,6 +21,7 @@
 
   .holder {
     padding: 0 82px;
+    max-width: 1600px;
   }
 
   .headerBar {
