--- a/src/components/ProductSlider/image-gallery-overrides.css
+++ b/src/components/ProductSlider/image-gallery-overrides.css
@@ -50,6 +50,7 @@
   -o-user-select: none;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
+  margin-bottom: 40px;
 }
 
 .image-gallery.fullscreen-modal {
